--- a/www/index.html
+++ b/www/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE HTML>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>myapp</title>
-    <link rel="stylesheet" href="screen.css" type="text/css" media="screen">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-  </head>
-  <body>
-    <h1>Hello</h1>
-    <p>World</p>
-    <button>NGINX</button>
-    <pre></pre>
-  </body>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /></head>
+<body>
+	<form action="/upload" enctype="multipart/form-data" method="post">
+	<input type="file" name="upload" multiple="multiple">
+	<input type="submit" value="Upload file" />
+	</form>
+</body>
 </html>
